--- a/src/public/css/index.css
+++ b/src/public/css/index.css
@@ -53,6 +53,7 @@
     border: none;
     display: inline-block;
     width: 100%;
+    font-size: 16px;
 }
 
 .form__input-radio {
@@ -68,6 +69,7 @@
     background-color: rgb(244, 244, 244);
     border: none;
     width: 100%;
+    font-size: 16px;
 }
 
 .form__group-content-tel-inner {
@@ -88,6 +90,7 @@
     width: 100%;
     text-align: center;
     border: none;
+    font-size: 16px;
 }
 
 .form__select>select {
@@ -95,6 +98,7 @@
     padding: 10px;
     background-color:rgb(244, 244, 244);
     border: none;
+    font-size: 16px;
 }
 
 .form__textarea>textarea {
@@ -104,6 +108,7 @@
     border: none;
     background-color: rgb(244, 244, 244);
     resize: none;
+    font-size: 16px;
 
 }
 
@@ -116,4 +121,10 @@
     display: block;
     margin: 25px auto 0;
     cursor: pointer;
+}
+
+.form__error {
+    padding-left: 10px;
+    color: red;
+    font-size: 14px;
 }
